<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".pages.kasMasjid.FormKasMasjidActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_keterangan">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:id="@+id/edt_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_nominal">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:id="@+id/edt_nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_kategori"
        android:layout_marginBottom="4dp"/>

    <RadioGroup
        android:id="@+id/rg_kategori_kas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/masuk"
        android:layout_marginBottom="8dp">

        <RadioButton
            android:id="@+id/masuk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:text="@string/rb_masuk"/>

        <RadioButton
            android:id="@+id/keluar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rb_keluar"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_jenis_kas"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:id="@+id/sp_jenis_kas"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <ImageButton
            android:id="@+id/btn_once_date"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:contentDescription="@string/iv_masjid_content_desc"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"/>
        <TextView
            android:id="@+id/tv_tgl_kas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/tv_tgl_input" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_kas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"/>

</LinearLayout>