<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".pages.dataJamaah.FormDataJamaahActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_nip">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/edt_nip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_nama">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_jenKelamin"
        android:layout_marginBottom="4dp"/>

    <RadioGroup
        android:id="@+id/rg_jenKel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <RadioButton
            android:id="@+id/radio_laki"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:text="@string/lakiLaki"/>

        <RadioButton
            android:id="@+id/radio_perempuan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/perempuan"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_alamat">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/edt_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <ImageButton
            android:id="@+id/btn_once_date"
            style="@style/Widget.Material3.Button.IconButton"
            android:contentDescription="@string/iv_masjid_content_desc"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"/>
        <TextView
            android:id="@+id/tv_once_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/tv_tanggalLahir" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_kontak">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/edt_kontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_jenKelamin"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:id="@+id/sp_kategori"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_submit_jamaah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"/>

</LinearLayout>