<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".pages.kegiatanMasjid.FormKegMasjidActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_nama_keg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nama_keg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <ImageButton
            android:id="@+id/btn_tgl_keg"
            style="@style/Widget.Material3.Button.IconButton"
            android:contentDescription="@string/iv_masjid_content_desc"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"/>
        <TextView
            android:id="@+id/tv_tgl_kegiatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/tv_tanggalKeg" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_deskripsi">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/edt_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/label_et_penanggung_jwb">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/edt_penganngungJwb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_jenKeg"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:id="@+id/sp_jen_keg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_submit_kegiatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"/>

</LinearLayout>