<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.kasMasjid.KasMasjidActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_kas_masjid"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_filter_kas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_masuk"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_masuk" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_keluar"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_keluar" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_total_kas"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            app:layout_anchorGravity="center_vertical"
            app:layout_anchor="@id/chip_group_filter_kegiatan"
            tools:text="Rp 200.000"/>

    </com.google.android.material.appbar.AppBarLayout>


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        app:layout_anchor="@id/rv_kas_masjid"
        app:layout_anchorGravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_kas_masjid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_kas_masjid" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_tambah_keg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/desc_fab_tambah_jamaah"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/rv_kas_masjid"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>